Make use of jpackage